<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Anicoubs</string>
    <string name="app_version" translatable="false">2.0</string>
    <integer name="com_vk_sdk_AppId">5614612</integer>

    <!-- Welcome -->
    <string name="welcome_slogan">Only freshly squeezed</string>
    <string name="welcome_log_in">Log In</string>
    <string name="welcome_sign_up">Don\'t have an account yet? Sign Up</string>

    <string name="vk_unknown_error">Unknown error occurred</string>
    <string name="vk_try_again">Try again later.</string>
    <string name="vk_ok" translatable="false">OK</string>

    <!-- Navigation -->
    <string name="menu_timeline">Timeline</string>
    <string name="menu_postponed">Postponed</string>
    <string name="menu_suggests">Suggests</string>
    <string name="menu_settings">Settings</string>

    <!-- Timeline -->
    <string name="timeline_loading">Loading</string>

    <!-- Postponed -->
    <string name="option_item_publish">Publish now</string>
    <string name="option_item_show_post">Show post</string>
    <string name="option_item_delete">Delete</string>

    <plurals name="quantity_views">
        <item quantity="one">%1$d view</item>
        <item quantity="other">%1$d views</item>
    </plurals>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_account">Account</string>

    <string name="pref_title_your_name">Your Name</string>
    <string name="pref_title_select_theme">Select theme</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_select_language">Select language</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_new_notification_sound">New message notification</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_logout">Logout</string>

    <string name="pref_key_name" translatable="false">key_name</string>
    <string name="pref_key_theme" translatable="false">key_theme</string>
    <string name="pref_key_language" translatable="false">key_language</string>
    <string name="pref_key_logout" translatable="false">key_logout</string>
    <string name="pref_key_about" translatable="false">key_about</string>

    <!-- Settings for Notifications -->
    <string name="notifications_new_message" translatable="false">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone" translatable="false">key_notifications_new_message_ringtone</string>

    <string name="pref_key_notifications_vibrate" translatable="false">key_vibrate</string>

    <string name="pref_default_value_user">Guest</string>
    <string name="pref_default_value_theme" translatable="false">Light</string>
    <string name="pref_default_value_language">EN</string>

    <string name="pref_summary_theme">Click to select theme</string>
    <string name="pref_summary_language">Click to select language</string>
    <string name="pref_summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_summary_vibrate">Vibrate on new notification</string>

    <!-- List languages -->
    <string-array name="settings_list_preference_languages_titles">
        <item>English (English)</item>
        <item>Russian (Русский)</item>
    </string-array>

    <!-- List languages values -->
    <string-array name="settings_list_preference_languages_values">
        <item>EN</item>
        <item>RU</item>
    </string-array>

    <!-- List themes -->
    <string-array name="settings_list_preference_themes_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Automatic</item>
    </string-array>

    <!-- List themes values -->
    <string-array name="settings_list_preference_themes_values">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>

    <!-- Snackbar messages -->
    <string name="snackbar_channel_is_blocked">The user’s channel is blacklisted.</string>
    <string name="snackbar_coub_is_not_hd">The added coub must be of high quality!</string>
    <string name="snackbar_recoubed_from">Recoubed from «%1$s»\n%2$s (%3$s)</string>

    <!-- Toast messages -->
    <string name="toast_invalid_coub_url">The value provided must be a valid URL!
        (https://coub.com/view/aabbcc)</string>

    <!-- Dialogs -->
    <string name="dialog_title_add">Add coub</string>
    <string name="dialog_title_delete_entry">Delete entry</string>
    <string name="dialog_title_publish_entry">Publish entry</string>
    <string name="dialog_title_choose_category">Choose a category</string>
    <string name="dialog_title_select_datetime">Select date &amp; time</string>

    <string name="dialog_message_coub_link">Coub link</string>
    <string name="dialog_message_no_internet_connection">Your network is unavailable.</string>
    <string name="dialog_message_confirm_publish">Are you sure want to publish this entry right now?</string>
    <string name="dialog_message_confirm_delete">Are you sure want to delete this entry?</string>

    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_ok" translatable="false">OK</string>
    <string name="dialog_button_choose">Choose</string>
    <string name="dialog_button_retry">Retry</string>

    <string name="dialog_warning_not_valid_url">Does not appear to be a valid URL</string>
    <string name="dialog_checkbox_postponed">Postponed posting</string>
    <string name="dialog_input_url_placeholder" translatable="false">https://coub.com/view/aabbcc</string>

    <string-array name="dialog_categories_list">
        <item>#cool@anicoubs.</item>
        <item>#fun@anicoubs.</item>
        <item>#sad@anicoubs.</item>
        <item>#nice@anicoubs.</item>
        <item>#scary@anicoubs.</item>
    </string-array>

</resources>
