<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_general">
        <EditTextPreference
                android:defaultValue="@string/pref_summary_user"
                android:key="@string/pref_key_name"
                android:summary="@string/pref_summary_user"
                android:title="@string/pref_title_your_name" />

        <ListPreference
                android:defaultValue="@string/pref_summary_language"
                android:dialogTitle="Select language"
                android:entries="@array/settings_list_preference_languages_titles"
                android:entryValues="@array/settings_list_preference_languages_values"
                android:key="@string/pref_key_language"
                android:summary="Click to select language"
                android:title="Language" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_notifications">
        <SwitchPreference
                android:defaultValue="false"
                android:key="@string/notifications_new_message"
                android:title="@string/pref_title_new_notification_sound"/>

        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/pref_key_notifications_vibrate"
                android:summary="@string/pref_summary_vibrate"
                android:title="@string/pref_title_vibrate"
                android:dependency="@string/notifications_new_message"/>
    </PreferenceCategory>

    <!--Account Settings-->
    <PreferenceCategory android:title="@string/pref_header_account">
        <Preference
                android:key="@string/pref_key_logout"
                android:title="@string/pref_title_logout" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">
        <Preference
                android:key="@string/pref_key_about"
                android:summary="@string/app_version"
                android:title="@string/pref_title_version" />
    </PreferenceCategory>

</PreferenceScreen>