<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="64dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="64dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="64dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="32dp" />

        <ImageView
            android:id="@+id/appLogoImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@+id/appNameTextView"
            app:layout_constraintEnd_toStartOf="@+id/right_well"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_well"
            app:layout_constraintTop_toTopOf="@+id/top_well"
            app:layout_constraintVertical_weight="0.65" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/appSloganNameTextView"
            app:layout_constraintEnd_toEndOf="@+id/appLogoImageView"
            app:layout_constraintStart_toStartOf="@+id/appLogoImageView"
            app:layout_constraintTop_toBottomOf="@+id/appLogoImageView"
            app:layout_constraintVertical_weight="0.15" />

        <TextView
            android:id="@+id/appSloganNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="start"
            android:text="@string/welcome_slogan"
            android:textColor="@color/colorSubtitle"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
            app:layout_constraintStart_toStartOf="@+id/appNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
            app:layout_constraintVertical_weight="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_log_in"
            android:textAllCaps="false"
            android:textColor="@color/chipIconTint"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_well"
            app:layout_constraintEnd_toEndOf="@+id/appSloganNameTextView"
            app:layout_constraintStart_toStartOf="@+id/appSloganNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/appSloganNameTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
